--- a/arlington-mobility-hubs.html
+++ b/arlington-mobility-hubs.html
@@ -131,19 +131,17 @@
   End OLD Header -->
 
   <main id="main">
-
     <!-- ======= Breadcrumbs ======= -->
     <section id="breadcrumbs" class="breadcrumbs">
       <div class="container">
-
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio Details / Arlington Moblity Hubs</h2>
-          <ol>
+         <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Portfoio Details</li>
+            <li><a href="index.html#portfolio">Portfolio</a></li>
           </ol>
         </div>
-
+        <br>
+        <h2>Arlington Mobility Hubs Guidebook and Concept Design</h2>
       </div>
     </section><!-- End Breadcrumbs -->
 
@@ -180,32 +178,24 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project Information</h3>
+              <h3>Key Project Details</h3>
               <ul>
-                <li><strong>Category</strong>: Mobility Hubs</li>
-                <li><strong>Client</strong>: Metropolitan Washington Council of Governments (COG), Arlington County</li>
+                <li><strong>Clients</strong>: Metropolitan Washington Council of Governments (COG) and Arlington County</li>
+                <li><strong>Role</strong>: Project Manager</li>
                 <li><strong>Date</strong>: September, 2021</li>
-                <li><strong>Final Report</strong>: <a href="https://www.arlingtonva.us/Government/Projects/Plans-Studies/Transportation-Plans-Studies/Mobility-Hub-Guidebook" target="_blank">Project Website</a></li>
+                <li><strong>Link</strong>: <a href="https://www.arlingtonva.us/files/sharedassets/public/transportation/documents/des-arlington-micromobility-transit-hub-report_final2.pdf" target="_blank">Final Report</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Project Details</h2>
+              <h2>Description</h2>
               <p>
-                Mobility hub guidebook and concept design.
+                Led this mobility hub guidebook and concept design project for the Metropolitan Washington Council of Governments and Arlington County. Working in tandem with colleagues and the client, we defined and customized a mobility hub planning process for their jurisdiction. I led the prototype design, including the placement of hub elements, and substantially updated the final concept design rendering to bring the client's vision to life. As primary author of the final report, I also did the graphic design and created the hub element cut-sheets.
               </p>
             </div>
             <div class="portfolio-description">
-              <h2>Project Role</h2>
+              <h2>Credit</h2>
               <p>
-                Project Manager
-              </p>
-            </div>
-            <div class="portfolio-description">
-              <h2>Work Performed</h2>
-              <p>
-                <li>Led prototype mobility hub site selection and concept design.</li>
-                <li>Worked with client to customize hub planning process for their jurisdiction.</li>
-                <li>Designed final report and served as primary author.</li>
+                This project represents a collective effort that included staff from Toole Design Group and Arlington County. I did not produce the original pilot concept rendering.
               </p>
             </div>
           </div>
