--- a/cvb-atp.html
+++ b/cvb-atp.html
@@ -131,19 +131,17 @@
   End OLD Header -->
 
   <main id="main">
-
     <!-- ======= Breadcrumbs ======= -->
     <section id="breadcrumbs" class="breadcrumbs">
       <div class="container">
-
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio Details / Virgina Beach Active Transportation Design Guidelines</h2>
-          <ol>
+         <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Portfoio Details</li>
+            <li><a href="index.html#portfolio">Portfolio</a></li>
           </ol>
         </div>
-
+        <br>
+        <h2>Virgina Beach Active Transportation Design Guidelines</h2>
       </div>
     </section><!-- End Breadcrumbs -->
 
@@ -197,33 +195,23 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project Information</h3>
+              <h3>Key Project Details</h3>
               <ul>
-                <li><strong>Category</strong>: Design Guidelines</li>
-                <li><strong>Client</strong>: City of Virginia Beach </li>
-                <li><strong>Project date</strong>: February, 2021</li>
-                <li><strong>Project URL</strong>: <a href="https://www.vbgov.com/government/departments/parks-recreation/design-development-projects/Pages/bikeways-trails-plan.aspx" target="_blank">www.vbgov.com</a></li>
+                <li><strong>Client</strong>: City of Virginia Beach</li>
+                <li><strong>Role</strong>: Task Lead</li>
+                <li><strong>Date</strong>: February, 2021</li>
+                <li><strong>Link</strong>: <a href="https://www.vbgov.com/government/departments/parks-recreation/design-development-projects/Pages/bikeways-trails-plan.aspx" target="_blank">Active Transportation Plan</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Project Details</h2>
+              <h2>Description</h2>
               <p>
-                A singificant update from the City's previous design standards, these active transportation design guidelines encourage consistent implementation of safer and more comfortable bicycle and pedestrian facilities on City streets.
-              </p>
+                A singificant update from the City's previous design standards, these active transportation design guidelines encourage consistent implementation of safer and more comfortable bicycle and pedestrian facilities on City streets. I curated and tailored state-of-practice guidelines for use in Virginia Beach, consistent with context-sensitive approaches in AASHTO, NACTO, FHWA, and other leading national design guidance resources. I coordinated the guideline production with the client and edited the final guidelines based on their feedback.</p>
             </div>
             <div class="portfolio-description">
-              <h2>Project Role</h2>
+              <h2>Credit</h2>
               <p>
-                Multimodal transportation planner
-              </p>
-            </div>
-            <div class="portfolio-description">
-              <h2>Work Performed</h2>
-              <p>
-                <li>Crafted state-of-practice guidelines for use in Virginia Beach.</li>
-                <li>Curated and adapted context-sensitive content from AASHTO, NACTO, FHWA, and other leading national design guidance resources.</li>
-                <li>Coordinated guideline production with client.</li>
-                <li>Edited final guidelines based on client feedback.</li>
+                These guidelines built on similar past projects by Toole Design. I did not produce the street renderings.
               </p>
             </div>
           </div>
