--- a/nchrp-20-07-task-420.html
+++ b/nchrp-20-07-task-420.html
@@ -135,15 +135,14 @@
     <!-- ======= Breadcrumbs ======= -->
     <section id="breadcrumbs" class="breadcrumbs">
       <div class="container">
-
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio Details / NCHRP Project 20-07/Task 420</h2>
-          <ol>
+         <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Portfoio Details</li>
+            <li><a href="index.html#portfolio">Portfolio</a></li>
           </ol>
         </div>
-
+        <br>
+        <h2>NCHRP Project 20-07/Task 420:<br>Road User Understanding of Bicycle Signal Faces on Traffic Signals</h2>
       </div>
     </section><!-- End Breadcrumbs -->
 
@@ -202,33 +201,24 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project Information</h3>
+              <h3>Key Project Details</h3>
               <ul>
-                <li><strong>Category</strong>: Research Report</li>
                 <li><strong>Client</strong>: National Cooperative Highway Research Program (NCHRP)</li>
-                <li><strong>Project date</strong>: November, 2019</li>
-                <li><strong>Project URL</strong>: <a href="https://doi.org/10.17226/25676" target="_blank">https://doi.org</a></li>
+                <li><strong>Role</strong>: Transportation Researcher</li>
+                <li><strong>Date</strong>: November, 2019</li>
+                <li><strong>Link</strong>: <a href="https://doi.org/10.17226/25676" target="_blank">Project Website</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Project Details</h2>
               <p>
-                This NCHRP task explored the state of bicycle signals in the United States including current agency implementation practices, how well road users understand this type of traffic signal, and needs for future research.
+                This NCHRP research project explored the state of bicycle signals in the United States including current agency implementation practices, how road users understand this type of traffic signal, and needs for future research. I developed structured interview questions to identify current practices and conducted interviews with transportation agency staff. I then analyzed the interview results and co-wrote the interview chapter of the report.</li>
               </p>
             </div>
             <div class="portfolio-description">
-              <h2>Project Role</h2>
+              <h2>Credit</h2>
               <p>
-                Multimodal transportation planner
-              </p>
-            </div>
-            <div class="portfolio-description">
-              <h2>Work Performed</h2>
-              <p>
-                <li>Developed structured interview questions to identify current practices.</li>
-                <li>Conducted interviews with agency staff.</li>
-                <li>Analyzed interview results.</li>
-                <li>Co-wrote analysis report chapter.</li>
+                This project was a collaborative effort by staff at Portland State University, Oregon State University, and Toole Design Group.
               </p>
             </div>
           </div>
