--- a/philadelphia-vz-psap.html
+++ b/philadelphia-vz-psap.html
@@ -135,18 +135,18 @@
     <!-- ======= Breadcrumbs ======= -->
     <section id="breadcrumbs" class="breadcrumbs">
       <div class="container">
-
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio Details / Philadelphia Visioin Zero Pedestrian Safety Action Plan</h2>
-          <ol>
+         <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Portfoio Details</li>
+            <li><a href="index.html#portfolio">Portfolio</a></li>
           </ol>
         </div>
-
+        <br>
+        <h2>Philadelphia Visioin Zero Pedestrian Safety Action Plan</h2>
+      </h2>
+      </h2>
       </div>
     </section><!-- End Breadcrumbs -->
-
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
@@ -158,13 +158,13 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
+                  <center><img src="assets/img/portfolio/philadelphia-psap-cover.png" alt="Introductory information about Vision Zero Toolkit."></center>
+                </div>
+
+                <div class="swiper-slide">
                   <center><img src="assets/img/portfolio/philadelphia-vz-psap-a.png" alt="Image of the Chapter 3 cover page"></center>
                 </div>
-<!--
-                <div class="swiper-slide">
-                  <center><img src="assets/img/portfolio/philadelphia-vz-psap-b.png" alt="Introductory information about Vision Zero Toolkit."></center>
-                </div>
--->
+
                 <div class="swiper-slide">
                   <center><img src="assets/img/portfolio/philadelphia-vz-psap-c.png" alt="Cut-Sheet"></center>
                 </div>
@@ -187,31 +187,24 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project Information</h3>
+              <h3>Key Project Details</h3>
               <ul>
-                <li><strong>Category</strong>: Vision Zero</li>
                 <li><strong>Client</strong>: City of Philadelphia</li>
-                <li><strong>Project date</strong>: May, 2021</li>
-                <li><strong>Project URL</strong>: <a href="https://www.phila.gov/documents/vision-zero-pedestrian-safety-study-and-action-plan/" target="_blank">www.phila.gov</a></li>
+                <li><strong>Role</strong>: Transportation Planner</li>
+                <li><strong>Date</strong>: May, 2021</li>
+                <li><strong>Link</strong>: <a href="https://www.phila.gov/documents/vision-zero-pedestrian-safety-study-and-action-plan/" target="_blank">Project Website</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Project Details</h2>
+              <h2>Description</h2>
               <p>
-                The City of Philadelphia's Pedestrian Safety Action Plan was developed to identify pedestrian safety issues and corresponding policy and design solutions.
+                The City of Philadelphia's Pedestrian Safety Action Plan identified pedestrian safety issues and corresponding policy and design solutions. I authored the plan's policy recommendations and the content for all systemic roadway safety design measure information sheets.</li>
               </p>
             </div>
             <div class="portfolio-description">
-              <h2>Project Role</h2>
+              <h2>Credit</h2>
               <p>
-                Multimodal planner
-              </p>
-            </div>
-            <div class="portfolio-description">
-              <h2>Work Performed</h2>
-              <p>
-                <li>Developed all policy recommendations.</li>
-                <li>Produced content for all safety tool cut-sheets.</li>
+                The Action Plan was a collaborative effort with input from staff at Toole Design Group, WSP, and the City of Philadelphia. WSP conducted the safety analysis.
               </p>
             </div>
           </div>
