--- a/walk-roll-lv.html
+++ b/walk-roll-lv.html
@@ -135,19 +135,20 @@
     <!-- ======= Breadcrumbs ======= -->
     <section id="breadcrumbs" class="breadcrumbs">
       <div class="container">
-
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio Details / Walk/Roll Lehigh Valley</h2>
-          <ol>
+         <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Portfoio Details</li>
+            <li><a href="index.html#portfolio">Portfolio</a></li>
           </ol>
         </div>
-
+        <br>
+        <h2>Walk Roll Lehigh Valley Active Transportation Plan</h2>
+      </h2>
+      </h2>
       </div>
     </section><!-- End Breadcrumbs -->
 
-    <!-- ======= Portfolio Details Section ======= -->
+   <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
 
@@ -200,34 +201,24 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project Information</h3>
+              <h3>Key Project Details</h3>
               <ul>
-                <li><strong>Category</strong>: Active Transportation Plan</li>
                 <li><strong>Client</strong>: Lehigh Valley Planning Commission </li>
-                <li><strong>Project date</strong>: June, 2020</li>
-                <li><strong>Project URL</strong>: <a href="https://www.lvpc.org/walkrolllv.html" target="_blank">www.lvpc.org</a></li>
+                <li><strong>Role</strong>: Transportation Planner</li>
+                <li><strong>Date</strong>: June, 2020</li>
+                <li><strong>Link</strong>: <a href="https://www.lvpc.org/walkrolllv.html" target="_blank">Project Website</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Project Details</h2>
+              <h2>Description</h2>
               <p>
-                The first first active transportation plan in this eastern rust-belt bi-county region, Walk/Roll Lehigh Valley articulates actionable recommendations and priority projects to make walking and biking safer and more accessible to people of all ages and abilities across diverese urban and rural communities.
+                The first first active transportation plan in this bi-county region at the eastern edge of the Rust Belt, Walk/Roll Lehigh Valley articulates actionable recommendations and priority projects to make walking and biking safer and more accessible to people of all ages and abilities across its diverese urban and rural communities. I analyzed regional crash data, developed the pedestrian network recommendations, and wrote the safety and pedestrian sections of plan. I also produced PowerPoint presentations for public meetings and edited the maps for the final plan.</li>
               </p>
             </div>
             <div class="portfolio-description">
-              <h2>Project Role</h2>
+              <h2>Credit</h2>
               <p>
-                Multimodal transportation planner
-              </p>
-            </div>
-            <div class="portfolio-description">
-              <h2>Work Performed</h2>
-              <p>
-                <li>Analyzed regional crash data.</li>
-                <li>Developed pedestrian network recommendations.</li>
-                <li>Wrote safety and pedestrian sections of plan.</li>
-                <li>Produced PowerPoint for public meeting.</li>
-                <li>Edited maps for final plan.</li>
+                This project was a collaboration between staff at Toole Design Group, Traffic Planning and Design, and the Lehigh Valley Planning Commission. The Commission's planning partners and stakeholders gave   additional input.
               </p>
             </div>
           </div>
