--- a/pbic-arterials.html
+++ b/pbic-arterials.html
@@ -135,15 +135,15 @@
     <!-- ======= Breadcrumbs ======= -->
     <section id="breadcrumbs" class="breadcrumbs">
       <div class="container">
-
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio / PBIC Webinar: Pedestrian Safety on Arterial Streets</h2>
-          <ol>
+         <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Portfoio</li>
+            <li><a href="index.html#portfolio">Portfolio</a></li>
           </ol>
         </div>
-
+        <br>
+        <h2>PBIC Webinar: Pedestrian Safety on Arterial Streets</h2>
+      </h2>
       </div>
     </section><!-- End Breadcrumbs -->
 
@@ -156,6 +156,9 @@
           <div class="col-lg-8">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
+                <div class="swiper-slide">
+                  <center><img src="assets/img/portfolio/pbic-webinar-cover-a.png" alt="Statistics showing pedestrian fatalities increasing by 53% in the past decade."></center>
+                </div>
 
                 <div class="swiper-slide">
                   <center><img src="assets/img/portfolio/pbic-webinar-a.png" alt="Statistics showing pedestrian fatalities increasing by 53% in the past decade."></center>
@@ -188,32 +191,24 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project Information</h3>
+              <h3>Key Project Details</h3>
               <ul>
-                <li><strong>Category:</strong> Pedestrian Safety</li>
-                <li><strong>Clients:</strong> Pedestrian and Bicycle Information Center, Federal Highway Administration  </li>
-                <li><strong>Date:/strong> June, 2021</li>
-                <li><strong>Link:</strong><a href="https://www.pedbikeinfo.org/webinars/webinar_details.cfm?id=110" target="_blank">Webinar Recording</a></li>
+                <li><strong>Clients</strong>: Pedestrian and Bicycle Information Center, Federal Highway Administration  </li>
+                <li><strong>Role</strong>: Panelist</li>
+                <li><strong>Date</strong>: June, 2021</li>
+                <li><strong>Link</strong>:<a href="https://www.pedbikeinfo.org/webinars/webinar_details.cfm?id=110" target="_blank"> Webinar Archive</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Project Details</h2>
+              <h2>Description</h2>
               <p>
-                The webinar gave an overview of safety challenges on arteiral streets and opportunites to improve pedestrian safety and health for a national audience of transportation practitioners.
+                We outlined safety challenges on arteiral streets and systemic roadway design treatments to improve pedestrian safety and health. I developed the webinar theme, concepts, slides, and case studies. It was presented to a national audience.</li>
               </p>
             </div>
             <div class="portfolio-description">
-              <h2>Project Role</h2>
+              <h2>Credit</h2>
               <p>
-                Developed webinar, co-presenter
-              </p>
-            </div>
-            <div class="portfolio-description">
-              <h2>Work Performed</h2>
-              <p>
-                <li>Developed webinar theme, concepts, content, and slides.</li>
-                <li>Researched and analyzed national pedestrian safety statistics.</li>
-                <li>Presented systemic pedestrian safety solutions and case studies in an accessible way to increase their use.</li>
+                The webinar was produced with input and support from colleagues at Toole Design Group and PBIC. PBIC graciously hosted and moderated the webinar, and special thanks to Dr. Carey McAndrews for presenting her slides and perspective.
               </p>
             </div>
           </div>
