--- a/arlington-mobility-hubs.html
+++ b/arlington-mobility-hubs.html
@@ -189,7 +189,7 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                Led this mobility hub guidebook and concept design project for the Metropolitan Washington Council of Governments and Arlington County. Working in tandem with colleagues and the client, we defined and customized a mobility hub planning process for their jurisdiction. I led the prototype design, including the placement of hub elements, and substantially updated the final concept design rendering to bring the client's vision to life. As primary author of the final report, I also did the graphic design and created the hub element cut-sheets.
+                Managed this mobility hub guidebook and concept design project for the Metropolitan Washington Council of Governments and Arlington County. Working in tandem with colleagues and the client, we defined and customized a mobility hub planning process for their jurisdiction. I led the prototype design, including the placement of hub elements, and substantially updated the final concept design rendering to bring the client's vision to life. As primary author of the final report, I created information sheets for each hub element and also did the graphic design and layout.
               </p>
             </div>
             <div class="portfolio-description">
