--- a/ite-micromobility.html
+++ b/ite-micromobility.html
@@ -135,17 +135,15 @@
     <!-- ======= Breadcrumbs ======= -->
     <section id="breadcrumbs" class="breadcrumbs">
       <div class="container">
-
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio Details / ITE Micromobility Design Competition</h2>
-          <ol>
+         <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Portfoio Details</li>
+            <li><a href="index.html#portfolio">Portfolio</a></li>
           </ol>
         </div>
-
+        <br>
+        <h2>Institute of Transportation Engineers <br> 2020 Micromobility Sandbox Design Challenge</h2>
       </div>
-    </section><!-- End Breadcrumbs -->
 
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
@@ -176,32 +174,24 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project Information</h3>
+              <h3>Key Project Details</h3>
               <ul>
-                <li><strong>Category</strong>: Design Competition</li>
                 <li><strong>Organization</strong>: Institute of Transportation Engineers (ITE)</li>
-                <li><strong>Project date</strong>: Summer 2020</li>
-                <li><strong>Project URL</strong>: <a href="https://www.dropbox.com/s/h64ue8h30m6c8iq/Designing_for_Micromobility.pdf" target="_blank">Download Report</a></li>
+                <li><strong>Role</strong>: Lead Planner</li>
+                <li><strong>Date</strong>: Summer 2020</li>
+                <li><strong>Link</strong>: <a href="https://www.dropbox.com/s/h64ue8h30m6c8iq/Designing_for_Micromobility.pdf" target="_blank">Download Report</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Project Details</h2>
+              <h2>Description</h2>
               <p>
-                Winning entry to the 2020 ITE Micromobility Design Competition. Included demographic, economic, and transportation research on the study corridor, neighborhood, and city; multimodal roadway reallocation; safety treatment selection; and revitalization planning.
+                Winning entry to the 2020 ITE Micromobility Design Challenge. I conducted demographic, economic, and transportation research on the study corridor, neighborhood, and host city. Alongside engineering colleagues, I participated in multiple collaborateive multimodal roadway reallocation design and corridor economic revitalization charrettes. I provided a critique of draft safety treatments and proposed additional safety recommendations consistent with the traffic and safety analyses. I graphically communicated thet corridor engineering concpet using Adobe Illustrator, wrote sections of the report, laid out the report in Adobe InDesign and served as the final editor responsible for submitting our team's entry.</li>
               </p>
             </div>
             <div class="portfolio-description">
-              <h2>Project Role</h2>
+              <h2>Credit</h2>
               <p>
-                Multimodal Transportation Planning Lead
-              </p>
-            </div>
-            <div class="portfolio-description">
-              <h2>Work Performed</h2>
-              <p>
-                <li>Conducted economic, demographic, and safety analysis.</li> 
-                <li>Graphically communicated engineering concpet using Adobe Illustrator.</li> 
-                <li>Wrote report sections, laid out report in Adobe InDesign and served as editor responsible for final competition entry submission.</li>
+                The team including Gwen Shaw, Ella Ryan, myself, Perrin Falkner, and Carly Haithcock completed this effort during their personal time. My colleagues conducted the engineering analysis and produced the corridor engineering CAD diagram that underlies the concept design figure.
               </p>
             </div>
           </div>
