--- a/nchrp-20-07-task-420.html
+++ b/nchrp-20-07-task-420.html
@@ -204,13 +204,13 @@
               <h3>Key Project Details</h3>
               <ul>
                 <li><strong>Client</strong>: National Cooperative Highway Research Program (NCHRP)</li>
-                <li><strong>Role</strong>: Transportation Researcher</li>
+                <li><strong>Role</strong>: Researcher</li>
                 <li><strong>Date</strong>: November, 2019</li>
                 <li><strong>Link</strong>: <a href="https://doi.org/10.17226/25676" target="_blank">Project Website</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Project Details</h2>
+              <h2>Description</h2>
               <p>
                 This NCHRP research project explored the state of bicycle signals in the United States including current agency implementation practices, how road users understand this type of traffic signal, and needs for future research. I developed structured interview questions to identify current practices and conducted interviews with transportation agency staff. I then analyzed the interview results and co-wrote the interview chapter of the report.</li>
               </p>
@@ -218,7 +218,7 @@
             <div class="portfolio-description">
               <h2>Credit</h2>
               <p>
-                This project was a collaborative effort by staff at Portland State University, Oregon State University, and Toole Design Group.
+                This project was a collaborative effort by staff at Portland State University, Oregon State University, and Toole Design Group. Staff at transportation agencies across the country graciously provided their insights during interviews with the project team.
               </p>
             </div>
           </div>
