--- a/ite-micromobility.html
+++ b/ite-micromobility.html
@@ -191,7 +191,7 @@
             <div class="portfolio-description">
               <h2>Credit</h2>
               <p>
-                The team including Gwen Shaw, Ella Ryan, myself, Perrin Falkner, and Carly Haithcock completed this effort during their personal time. My colleagues conducted the engineering analysis and produced the corridor engineering CAD diagram that underlies the concept design figure.
+                The team including Gwen Shaw, Ella Ryan, myself, Perrin Falkner, and Carly Haithcock completed this effort during their personal time. My colleagues conducted the engineering analysis and produced the corridor engineering CAD diagram that underlies the concept figure.
               </p>
             </div>
           </div>
