--- a/index.html
+++ b/index.html
@@ -45,11 +45,7 @@
         </div>
         <div class="social-links mt-3 text-center">
           <a href="mailto:thomasnhillman@gmail.com" class="email"><i class="bx bx-envelope"></i></a>
-        <!--  <a href="tel:+1-609-933-6049" class="Call"><i class="bx bx-phone"></i></a>
-          <a href="sms:+1-609-933-6049" class="Call"><i class="bi bi-chat-dots"></i></a>
-        -->
-          <a href="https://www.linkedin.com/in/thomas-h-8779a9a" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
-        
+          <a href="https://www.linkedin.com/in/thomas-h-8779a9a" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>     
         </div>
       </div>
 
@@ -74,7 +70,8 @@
     <div class="hero-container" data-aos="fade-in">
       <p><span class="typed" data-typed-items="Sustainable, Healthy, Safe "></span>Mobility Planning</p>
     </div>  
-     </section><!-- End Hero -->
+  </section>
+  <!-- End Hero -->
 
   <main id="main">
 
