--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container">
-
         <div class="section-title">
           <h2>About</h2>
           <p>Thomas has dedicated the past seven years of his career to creating safer transportation networks and more walkable, bikeable, and transit-friendly places. By working with government, private sector, and non-profit stakeholders to develop transportaiton plans, policies, and programs, he has helped decisionmakers to guide infrastructure investments in alignment with community values and to increase climate and social resilience.</p>
@@ -86,15 +85,14 @@
           <p>He has managed a diverse array of transportation projects including Vision Zero, bikeshare, and active transportation efforts. He has helped lead State Highway Safety Plans, Vision Zero Action Plans, and Safe Routes to School plans; conducted complex safety, demographic and economic analyses; and planned public transit routes, fares, and schedules. In addition, he has evaluated transportation programs on behalf of cities and Metropolitan Planning Organizations.</p>
           <br>
           <p>Thomas earned his Master's degree in City and Regional Planning, with a focus on transportation, in 2015 from the Edward J. Bloustein School at Rutgers University. He holds a BA in Political Studies with a minor in Latin American Studies from Bard College.</p>
-          
         </div>
 
-        <div class="row">
-          <div class="col-lg-8" data-aos="fade-right">
-            <img src="assets/img/main-img.jpg" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+        <div class="col-lg-8 pt-4 pt-lg-0" data-aos="fade-left" >
+          <img src="assets/img/main-img.jpg" class="img-fluid" alt="">
+        </div>
 <!--
+            <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+
             <h3>Transportation Planning &amp; Policy.</h3>
             <p class="fst-italic">
               Helping your community get around more easily, safely, and affordably, while improving public wellbeing.
