--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-4 col-md-6 col-sm-6 portfolio-item filter-plan filter-toole">
+          <div class="col-lg-4 col-md-6 col-sm-6  col-xs-6 portfolio-item filter-plan filter-toole">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/arlington-mobility-hubs.png" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -277,7 +277,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 col-sm-6 portfolio-item filter-safety filter-toole">
+          <div class="col-lg-4 col-md-6 col-sm-6  col-xs-6 portfolio-item filter-safety filter-toole">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/philadelphia-vz-psap.png" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -287,7 +287,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 col-sm-6 portfolio-item filter-plan filter-public-engagement filter-toole">
+          <div class="col-lg-4 col-md-6 col-sm-6  col-xs-6 portfolio-item filter-plan filter-public-engagement filter-toole">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/northern-gateway.png" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -297,7 +297,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 col-sm-6 portfolio-item filter-safety filter-plan filter-toole">
+          <div class="col-lg-4 col-md-6 col-sm-6  col-xs-6 portfolio-item filter-safety filter-plan filter-toole">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/cvb-atp.png" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -307,7 +307,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 col-sm-6 portfolio-item filter-safety filter-toole">
+          <div class="col-lg-4 col-md-6 col-sm-6  col-xs-6 portfolio-item filter-safety filter-toole">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/m-ncppc-vz.png" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -317,7 +317,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 col-sm-6 portfolio-item filter-safety filter-plan filter-public-engagement filter-toole">
+          <div class="col-lg-4 col-md-6 col-sm-6  col-xs-6 portfolio-item filter-safety filter-plan filter-public-engagement filter-toole">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/walk-roll-lv.png" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -327,7 +327,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 col-sm-6 portfolio-item filter-public-engagement filter-safety filter-toole">
+          <div class="col-lg-4 col-md-6 col-sm-6  col-xs-6 portfolio-item filter-public-engagement filter-safety filter-toole">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/pbic-webinar.png" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -337,7 +337,7 @@
             </div>
           </div>         
 
-          <div class="col-lg-4 col-md-6 col-sm-6 portfolio-item filter-research-evaluation filter-toole">
+          <div class="col-lg-4 col-md-6 col-sm-6  col-xs-6 portfolio-item filter-research-evaluation filter-toole">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/nchrp-20-07-task-420.png" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -347,7 +347,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 col-sm-6 portfolio-item filter-research-evaluation filter-toole">
+          <div class="col-lg-4 col-md-6 col-sm-6  col-xs-6 portfolio-item filter-research-evaluation filter-toole">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/alexandria-eval.png" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -357,7 +357,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 col-sm-6 portfolio-item filter-plan filter-safety">
+          <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 portfolio-item filter-plan filter-safety">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/ite-micromobility.png" class="img-fluid" alt="">
               <div class="portfolio-links">
