--- a/index.html
+++ b/index.html
@@ -401,38 +401,53 @@
               <h4><i class="bi bi-mortarboard"></i>&nbsp Master of City and Regional Planning</h4>
               <h5>2015</h5>
               <p><em>Edward J. Bloustin School, Rutgers University, New Brunswick, NJ</em></p>
-              <li>Concentration in Transportation Planning</l>
-              <li>Graduate Certificate in Public Policy</l>
+              <!--<ul>
+                <li>Concentration in Transportation Planning</li>
+                <li>Graduate Certificate in Public Policy</li>
+              </ul>
+              -->
             </div>
             <div class="resume-item">
               <h4><i class="bi bi-mortarboard"></i>&nbsp Bachelor of Arts, Political Studies</h4>
               <h5>2010</h5>
               <p><em>Bard College, Annandale-on-Hudson, NY</em></p>
-              <!-- <li>Thesis on Comparative Education Policy Reform in Argentina and Chile</i></l>
-              <li>Major in Political Studies</li> -->
-              <li>Minor in Latin American and Iberian Studies</l> 
+              <ul>
+                <!-- <li>Thesis on Comparative Education Policy Reform in Argentina and Chile</i></l>
+                <li>Major in Political Studies</li> 
+                <li>Minor in Latin American and Iberian Studies</li> 
+              </ul>-->
             </div>
 
           <h3 class="resume-title">Awards and Presentations</h3>
           <div class="resume-item">
-            <h4><i class="bi bi-webcam"></i>&nbsp Pedestrian Safety and Arterial Streets</h4>
+            <h4><i class="bi bi-webcam"></i>&nbsp Pedestrian Safety on Arterial Streets</h4>
             <h5>2021</h5>
-            <p><em>Pedestrian and Bicycle Information Center Webinar</em></p>
-            <li>Provided overview of current pedestrian safety trends.</l>
-            <li>Presented systemic context-sensitive design solutions.</l>
+            <p><em>Pedestrian and Bicycle Information Center Webinar Series</em></p>
+            <!--<ul>
+              <li>Provided overview of current pedestrian safety trends.</l>
+              <li>Presented systemic context-sensitive design solutions.</l>
+            </ul>
+            -->
           </div>
           <div class="resume-item">
-            <h4><i class="bi bi-award"></i>&nbsp Winner, Micromobility Sandbox Competition</h4>
+            <h4><i class="bi bi-award"></i>&nbsp Winner, Micromobility Sandbox Design Challenge</h4>
             <h5>2020</h5>
             <p><em>Institute for Transportation Engineers</em></p>
-            <li>Lead planner for urban corridor design.</l>
-            <li>Created graphics, guided safety analysis and countermeasures.</l>
+            <!--<ul>
+              <li>Lead planner for urban corridor design.</l>
+              <li>Created graphics, guided safety analysis and countermeasures.</l>
+            </ul>
+          -->
           </div>
           <div class="resume-item">
             <h4><i class="bi bi-webcam"></i>&nbsp Minnesota Systemic Pedestrian Safety Analysis</h4>
             <h5>2020</h5>
-            <p><em>Minnesota Transportation Conference</em></p>
-            <li>Presented results of statewide systemic pedestrian safety analysis with state DOT partners.</l>
+            <p><em>Minnesota Transportation Conference Presentation</em></p>
+            <!--
+            <ul>
+              <li>Presented results of statewide systemic pedestrian safety analysis with state DOT partners.</li>
+            </ul>
+          -->
           </div>
         </div>
 
