--- a/pbic-arterials.html
+++ b/pbic-arterials.html
@@ -208,7 +208,7 @@
             <div class="portfolio-description">
               <h2>Credit</h2>
               <p>
-                The webinar was produced with input and support from colleagues at Toole Design Group and PBIC. PBIC graciously hosted and moderated the webinar, and special thanks to Dr. Carey McAndrews for presenting her slides and perspective.
+                The webinar was produced with input and support from colleagues at Toole Design Group and PBIC. PBIC graciously hosted and moderated the webinar, and Dr. Carey McAndrews contributed her own slides and public health perspective.
               </p>
             </div>
           </div>
