--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
           </div>
         </div>
 
-        <div class="row g-1 g-sm-3 g-md-3 g-lg-3 gy-0 gy-sm-1 gy-md-1 gy-lg-1  portfolio-container" data-aos="fade-up" data-aos-delay="100">
+        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
           <div class="col-lg-4 col-md-6 col-sm-6 col-6 gy-1 gy-lg-1 portfolio-item filter-plan filter-toole">
             <div class="portfolio-wrap">
